@@ -1,2 +1,0 @@
-<?php
-header('HTTP/1.0 404 Not Found');
